--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ p {
 
 /* Buttons */
 button {
-    font-family: inherit;
+    font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
     padding: 15px 30px;
     margin: 10px;
